--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,14 @@ dependencies = [
     "fastapi (>=0.117.1,<0.118.0)",
     "pydantic (>=2.11.9,<3.0.0)",
     "sqlalchemy (>=2.0.43,<3.0.0)",
-    "uvicorn (>=0.36.0,<0.37.0)"
+    "uvicorn (>=0.36.0,<0.37.0)",
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.4.2"
+
