--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "pydantic (>=2.11.9,<3.0.0)",
     "sqlalchemy (>=2.0.43,<3.0.0)",
     "uvicorn (>=0.36.0,<0.37.0)",
+    "psycopg2 (>=2.9.11,<3.0.0)",
+    "python-dotenv (>=1.2.1,<2.0.0)",
 ]
 
 
