--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "api-nightfall-is-a-dev"
 version = "0.1.0"
 description = ""
 authors = [
-    {name = "Nightfall3594",email = "briankristoferperez28@gmail.com"}
+    {name = "Nightfall3594", email = "briankristoferperez28@gmail.com"}
 ]
 readme = "README.md"
 requires-python = ">=3.13"
@@ -20,6 +20,9 @@ dependencies = [
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry]
+package-mode = false
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.2"
